{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 113,
  "lineage": "4fa17be6-7536-3206-6a3b-ce4a9e6f8afc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.5",
            "domain": "vpc",
            "id": "eipalloc-087f380e3da2fdb0e",
            "public_dns": "ec2-18-133-150-82.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.150.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Development-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a13d44dccf1f5cf6",
            "arn": "arn:aws:ec2:eu-west-2:534046192466:instance/i-021c62ff6175e5f9c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-021c62ff6175e5f9c",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ibuchh-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0beaab733b3b18ca0",
            "private_dns": "ip-10-0-1-146.eu-west-2.compute.internal",
            "private_ip": "10.0.1.146",
            "public_dns": "ec2-18-132-47-75.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.47.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b0e07ca099996378",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a92c26432dd5528d",
            "tags": {
              "Name": "Jenkins-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0ba54e5682eb9d7"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_allow_ssh_jenkins",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "development-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ad7f3db0d58c16c5",
            "owner_id": "534046192466",
            "tags": {
              "Name": "Development-IGW"
            },
            "vpc_id": "vpc-0782df7a605d42ae7"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087f380e3da2fdb0e",
            "id": "nat-03e9856b459cecd4d",
            "network_interface_id": "eni-02599e02ba347426f",
            "private_ip": "10.0.1.43",
            "public_ip": "18.133.150.82",
            "subnet_id": "subnet-0a92c26432dd5528d",
            "tags": {
              "Name": "Development-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-018c1df0e7ffeebfa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-03e9856b459cecd4d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-018c1df0e7ffeebfa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ad7f3db0d58c16c5",
            "id": "r-rtb-02aa7887f632a21dc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02aa7887f632a21dc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.development-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-018c1df0e7ffeebfa",
            "owner_id": "534046192466",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Private-RouteTable"
            },
            "vpc_id": "vpc-0782df7a605d42ae7"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02aa7887f632a21dc",
            "owner_id": "534046192466",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Public-RouteTable"
            },
            "vpc_id": "vpc-0782df7a605d42ae7"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09daef7b21672f0d1",
            "route_table_id": "rtb-018c1df0e7ffeebfa",
            "subnet_id": "subnet-04161fe6bba5a1fa2"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03eb0950af78b2920",
            "route_table_id": "rtb-018c1df0e7ffeebfa",
            "subnet_id": "subnet-0b0bbbda4a757523a"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-3-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0256f8452f827ed6f",
            "route_table_id": "rtb-018c1df0e7ffeebfa",
            "subnet_id": "subnet-0cd85a3061f755607"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-3",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044e5068ef018e316",
            "route_table_id": "rtb-02aa7887f632a21dc",
            "subnet_id": "subnet-0a92c26432dd5528d"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-2-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048c1e5b83abaeecc",
            "route_table_id": "rtb-02aa7887f632a21dc",
            "subnet_id": "subnet-030641414c25cb0cd"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-3-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aee1bd51b38474f2",
            "route_table_id": "rtb-02aa7887f632a21dc",
            "subnet_id": "subnet-004f2ce48d4743082"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-3",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh_jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:534046192466:security-group/sg-0c0ba54e5682eb9d7",
            "description": "Allow SSH and Jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0ba54e5682eb9d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_ssh_jenkins",
            "name_prefix": null,
            "owner_id": "534046192466",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0782df7a605d42ae7"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:534046192466:subnet/subnet-04161fe6bba5a1fa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-04161fe6bba5a1fa2",
            "map_public_ip_on_launch": false,
            "owner_id": "534046192466",
            "tags": {
              "Name": "Development-Private-Subnet-1"
            },
            "vpc_id": "vpc-0782df7a605d42ae7"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:534046192466:subnet/subnet-0b0bbbda4a757523a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0b0bbbda4a757523a",
            "map_public_ip_on_launch": false,
            "owner_id": "534046192466",
            "tags": {
              "Name": "Development-Private-Subnet-2"
            },
            "vpc_id": "vpc-0782df7a605d42ae7"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:534046192466:subnet/subnet-0cd85a3061f755607",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0cd85a3061f755607",
            "map_public_ip_on_launch": false,
            "owner_id": "534046192466",
            "tags": {
              "Name": "Development-Private-Subnet-3"
            },
            "vpc_id": "vpc-0782df7a605d42ae7"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:534046192466:subnet/subnet-0a92c26432dd5528d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a92c26432dd5528d",
            "map_public_ip_on_launch": false,
            "owner_id": "534046192466",
            "tags": {
              "Name": "Development-Public-Subnet-1"
            },
            "vpc_id": "vpc-0782df7a605d42ae7"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:534046192466:subnet/subnet-030641414c25cb0cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-030641414c25cb0cd",
            "map_public_ip_on_launch": false,
            "owner_id": "534046192466",
            "tags": {
              "Name": "Development-Public-Subnet-2"
            },
            "vpc_id": "vpc-0782df7a605d42ae7"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:534046192466:subnet/subnet-004f2ce48d4743082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-004f2ce48d4743082",
            "map_public_ip_on_launch": false,
            "owner_id": "534046192466",
            "tags": {
              "Name": "Development-Public-Subnet-3"
            },
            "vpc_id": "vpc-0782df7a605d42ae7"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "development-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:534046192466:vpc/vpc-0782df7a605d42ae7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039eb5794627f272d",
            "default_route_table_id": "rtb-06ab1fa662341ea87",
            "default_security_group_id": "sg-05d3fa9a0d48b6979",
            "dhcp_options_id": "dopt-a9f9e6c0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0782df7a605d42ae7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06ab1fa662341ea87",
            "owner_id": "534046192466",
            "tags": {
              "Name": "Development-VPC"
            }
          }
        }
      ]
    }
  ]
}